[package]
name = "appleloc"
version = "0.0.5"
description = "Crate for accessing Apple's internal geolocation API service."
license = "MIT"
homepage = "https://github.com/AngeloD2022/appleloc"
repository = "https://github.com/AngeloD2022/appleloc"
readme = "README.md"
edition = "2021"


[dependencies]
thiserror = "1.0.61"
protobuf = "3.4.0"
reqwest = { features = ["blocking"], version = "0.12.4" }

[build-dependencies]
protobuf-codegen = "3.4.0"