[package]
name = "appleloc"
version = "0.0.5"
description = "Crate for accessing Apple's internal geolocation API service."
license = "GPL-3.0"
homepage = "https://github.com/AngeloD2022/appleloc"
repository = "https://github.com/AngeloD2022/appleloc"
readme = "README.md"
edition = "2021"


[dependencies]
thiserror = "1.0.61"
reqwest = { features = ["blocking"], version = "0.12.4" }
prost = "0.13.1"

[build-dependencies]
prost-build = "0.13.1"
